--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Nicht eure Suende - eure Genuegsamkeit schreit gen Himmel, euer Geiz selbst in eurer Suende schreit gen Himmer!</h1>
+<h1>Henry van Wagenberg's blog</h1>
 
 <%= link_to "henryblog", posts_path %>
 <% (1..100).each do |x| %>
