--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,3 @@
 <h1>Henry van Wagenberg's blog</h1>
 
-<%= link_to "henryblog", posts_path %>
-<% (1..100).each do |x| %>
-	<%= x %>
-<% end %>
+<%= link_to "Read Henry's blog", posts_path %>
