--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,16 +2,23 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.sub-header {
+  font-size: 16px;
+}
 
 img {
 	width:600px;
 }
 
+.img_caption {
+  font-size: 10px;
+  font-style: italic;
+}
 .posts {
-  width: 600px;
+    width: 600px;
 
   .post-author {
-    font-size: 16px;
+    font-size: 12px;
 
   }
 
@@ -23,7 +30,6 @@ img {
   .post-title {
     font-style: italic;
     margin-bottom: 10px;
-    border-bottom: 1px solid black;
 
   }
 
