homepage view updates + new static page Paintings

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -6,6 +6,7 @@
 %br/ 
 = link_to 'About', about_path
 = link_to 'Contact', contact_path
+= link_to 'Beautiful Paintings', paintings_path
 =# link_to 'New Post', new_post_path 
 
 %p 
@@ -31,7 +32,11 @@
     =# link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } 
  
 
-
+%br
+%br
+%br
+%br
+%br
 
 -if current_user
   %span logged in as
