--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,8 +1,8 @@
 %h1 About
 %p
-  I've dedicated this website to my reflections on philosophy in practice in business and in life. I am one of the co-founders of 
-  %a {:href => 'http://ratemystudyabroad.com'}>RateMyStudyAbroad.com
-  , an independent website for student reviews of study abroad programs. I spent one year living in an internet-free cottage owned by my father in Baltimore County reading philosophy and literature beginning with Homer and the Pre-Socratic philosophers.  In Fall of 2013 I plan to study for a masters in philosophy in Berlin.
+  I've dedicated this website to my reflections on philosophy in practice in business and in life. I am one of the co-founders of RateMyStudyAbroad.com, an independent website for student reviews of study abroad programs. I spent one year living in an internet-free cottage owned by my father in Baltimore County reading philosophy and literature beginning with Homer and the Pre-Socratic philosophers.  In Fall of 2013 I plan to study for a masters in philosophy in Berlin.
 
 
+
+=link_to "RateMyStudyAbroad.com", "http://ratemystudyabroad.com/",
 
