changed to henryvanwagenberg.com/favicon.ico typo fix

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,4 +1,4 @@
-/ = image_tag "http://henryvanwagenberg/favicon.ico"
+/ = image_tag "http://henryvanwagenberg.com/favicon.ico"
 
 %h1 Henry van Wagenberg's blog
 
