many images and buttons hand-drawn added

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,21 +1,17 @@
-/ = image_tag "http://henryvanwagenberg.com/favicon.ico"
 
-%h1 Henry van Wagenberg's blog
+= image_tag "titlebox.png"
+ 
 
-.sub-header Philosophy in Practice in Business and Life
-
-%br/ 
-= link_to 'About', about_path
-= link_to 'Contact', contact_path
-= link_to 'Beautiful Paintings', paintings_path
 =# link_to 'New Post', new_post_path 
 
 %p 
 -# #henry test
 -# .will will
+= image_tag "MoreButton.png"
+/ = image_tag "Stoic3.jpg"
+= image_tag "stoiclogocolor.jpeg"
+.img_caption Hacking life with Stoic Philosophy
 
-= image_tag "Caspar.jpg" 
-.img_caption Watercolor by Caspar David Friedrich, 1820
 
 %p
 
