--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Henry's Blog</title>
+  <div class="navbar">
+  <div class="navbar-inner">
+    <a class="brand" href="/">WRITING</a>
+    <ul class="nav">
+      <li class="active"><a href="/about.html">ABOUT</a></li>
+      <li><a href="/contact.html">CONTACT</a></li>
+      <li><a href="/paintings.html">ART</a></li>
+    </ul>
+  </div>
+</div>
+  <title>Stoic Hacks</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 
-<link rel="icon" href="/favicon.ico" type="image/ico" />
+<link rel="icon" href="/favicon3000.ico" type="image/ico" />
 
 </head>
 <body>
