updated logos, created programming schedule

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,15 +1,19 @@
+= link_to about_path image_tag "MoreButton.png", :style => "max-height: 100px; max-width: 100px;"
 
 = image_tag "titlebox.png"
- 
+
+= link_to "My Programming Schedule", programming_path
 
 =# link_to 'New Post', new_post_path 
 
 %p 
 -# #henry test
 -# .will will
-= image_tag "MoreButton.png"
+
 / = image_tag "Stoic3.jpg"
-= image_tag "stoiclogocolor.jpeg"
+= image_tag "yellowlogo.jpeg"
+= image_tag "silverlogo.jpeg"
+= image_tag "brownlogo.jpeg"
 .img_caption Hacking life with Stoic Philosophy
 
 
