--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,4 +1,5 @@
-= link_to about_path image_tag "MoreButton.png", :style => "max-height: 100px; max-width: 100px;"
+= image_tag "MoreButton.png", :style => "max-height: 100px; max-width: 100px;"
+/ = link_to about_path image_tag "MoreButton.png", :style => "max-height: 100px; max-width: 100px;"
 
 = image_tag "titlebox.png"
 
@@ -15,6 +16,11 @@
 = image_tag "silverlogo.jpeg"
 = image_tag "brownlogo.jpeg"
 .img_caption Hacking life with Stoic Philosophy
+
+= image_tag "footer.png"
+= image_tag "footer2.png"
+= image_tag "Footer3.png"
+= image_tag "Footer4.png"
 
 
 %p
