--- a/app/views/static_pages/programming.html.haml
+++ b/app/views/static_pages/programming.html.haml
@@ -4,9 +4,9 @@
 
 %p 
 %p Total weeks left in Fort Collins at the time of this planning session: 10.5
-%p # of Remaining CodeAcademy modules: 13
-%p # of Remaining Udemy #1 modules: 45
-%p # of Remaining Chapters of Agile Development: 26
+%p # of Remaining CodeAcademy modules: 13 / 13
+%p # of Remaining Udemy #1 modules: 45 / 39
+%p # of Remaining Chapters of Agile Development: 26 / 23
 %p 
   Number of modules needed to be completed in order to meet my goal: 84 modules; 
   %b 8 per week
@@ -24,19 +24,19 @@
   %tr
     %td June 24
     %td 8
-    %td 1
+    %td 2
   %tr
     %td July 1
     %td 8
-    %td 0
+    %td 0 [Houston]
   %tr
     %td July 8
     %td 8
-    %td 0
+    %td 7
   %tr
     %td July 15
     %td 8
-    %td 0
+    %td 1
   %tr
     %td July 22
     %td 8
