--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -15,6 +15,8 @@ img {
   font-style: italic;
 }
 
+.center { text-align: center }
+
 
 #more_button {
   background-image :url(/assets/morebutton.png);
