--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,7 +1,10 @@
 
 #more_button
 
-= image_tag "titlebox.png"
+.center
+  = image_tag "titlebox.png"
+  = image_tag "stoic hacks logo.png"
+
 
 / = link_to image_tag, about_path, id: "more_button"
 / = link_to about_path image_tag "MoreButton.png", :style => "max-height: 100px; max-width: 100px;"
@@ -18,16 +21,9 @@
 -# #henry test
 -# .will will
 
-/ = image_tag "Stoic3.jpg"
-= image_tag "yellowlogo.jpeg"
-= image_tag "silverlogo.jpeg"
-= image_tag "brownlogo.jpeg"
+
 .img_caption Hacking life with Stoic Philosophy
 
-= image_tag "footer.png"
-= image_tag "footer2.png"
-= image_tag "Footer3.png"
-= image_tag "Footer4.png"
 
 
 %p
