--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -7,7 +7,14 @@
 }
 
 img {
-	width:400px;
+	width:350px;
+}
+
+.logo {
+  position:absolute;
+  left:0;
+  top:0;
+
 }
 
 .img_caption {
@@ -15,12 +22,16 @@ img {
   font-style: italic;
 }
 
-.center { text-align: center }
+.center { 
+  position: center;
+  text-align: center;
+  width: 500px
+}
 
 body, html{
     background-color:#EAE9E1;
-      width:90%;
-    height:157%;
+      width:1000px;
+    height:1000px;
     margin: auto;
 }
 
@@ -68,3 +79,17 @@ body, html{
   margin: auto;
 }
 
+.infobox {
+    width: 100%;
+    height: 100px;
+    position: relative;
+    border: 10px solid red;
+    background: url(/assets/blankbox.png); 
+    background-size: cover;
+}
+
+.aa {
+    position: absolute;
+    top: 10px;
+    left: 0;
+}
