--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,11 +1,13 @@
 
-
-
-.center
-  = link_to image_tag("stoic hacks logo.png"), index_path
-  = image_tag "titlebox.png"
-
-
+.row-fluid
+  .span12
+    .span4
+      = link_to image_tag("stoic hacks logo.png"), index_path
+    .span4
+      = image_tag "titlebox.png"
+    .span4
+      .infobox
+        .aa Text goes here
 
 / = link_to image_tag, about_path, id: "more_button"
 / = link_to about_path image_tag "MoreButton.png", :style => "max-height: 100px; max-width: 100px;"
