--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -7,14 +7,11 @@
       = image_tag "titlebox.png"
     .span4
       .infobox
-        .aa Text goes here
+        .infotext I'm a 28-year-old entrepreneur, web developer and philosophy student who believes that philosophy has practical applications in life and in business. I live in Berlin, Germany.
 
 / = link_to image_tag, about_path, id: "more_button"
 / = link_to about_path image_tag "MoreButton.png", :style => "max-height: 100px; max-width: 100px;"
 
-%h3 Hey there
-
-%p I'm a 28 year old philosophy student and entrepreneur who believes that philosophy has practical applications in life, in business, in getting things done, and in creating extraordinary value and contributions to the world.
 
 = link_to "My Programming Schedule", programming_path
 
