--- a/app/views/static_pages/odyssey.html.haml
+++ b/app/views/static_pages/odyssey.html.haml
@@ -7,3 +7,7 @@
 %h4 Many cities of men he saw, and learned their minds,
 %h4 Many pains he suffered, heartsick on the open sea,
 %h4 Fighting to save his life, and bring his comrades home.
+
+= succeed '.' do
+  = @current_user
+  has logged in
