fixed vertical alignment

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -4,7 +4,8 @@
     .span4
       = link_to image_tag("stoic hacks logo.png"), index_path
     .span4
-      = image_tag "titlebox.png"
+      .titlebox
+        = image_tag "widetitlebox.png"
     .span4
       .infobox
         .infotext I'm a 28-year-old entrepreneur, web developer and philosophy student who believes that philosophy has practical applications in life and in business. I live in Berlin, Germany.
