--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -10,12 +10,6 @@ img {
 	width:350px;
 }
 
-.logo {
-  position:absolute;
-  left:0;
-  top:0;
-
-}
 
 .img_caption {
   font-size: 10px;
@@ -30,20 +24,25 @@ img {
 
 body, html{
     background-color:#EAE9E1;
-      width:1100px;
+    width:1100px;
     height:1100px;
     margin: auto;
 }
 
-#more_button {
-  background-image :url(/assets/morebutton.png);
-  max-height: 100px; 
-  max-width: 100px;
+.more_button {
+  position: relative;
+  margin-top: 60px;
+  background: url(/assets/morebuttonsprite.png);
+  background-position: 0px 0px;
+  background-repeat: no-repeat;
+  display:block;
+  height: 10px;
+  width: 30px;
+
 }
 
-#more_button:hover {
-  max-height: 100px; 
-  max-width: 100px;
+.more_button:hover {
+  background-position: 0px -76px;
 }
 
 .posts {
@@ -73,21 +72,29 @@ body, html{
     border:1px solid red;
 }
 
-.titlebox {
-  margin-top: 40px;
-  position: absolute;
-  background-position:center;
-  display:block;
-  
-}
+
 #wrapper {
   background-color:#EAE9E1;
   width: 20%;
   margin: auto;
 }
 
+.titlebox {
+  margin-top: 40px;
+  margin-left: -40px;
+  margin-right: -40px;
+  float: right;
+  gridColumnWidth: 450px;
+  position: relative;
+  background-position:center;
+  display:block;
+  
+}
+
 .infobox {
     position: relative;
+    float: right;
+    margin-right: 20px;
     margin-top: 60px;
     background: url(/assets/smallinfoblankbox.png); 
     background-position: center;
@@ -99,9 +106,8 @@ body, html{
 }
 
 .infotext {
-    position: absolute;
+    position: relative;
     top: 15%;
     left: 9%;
-    z-index:100;
     width: 85%
 }
