--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,3 +1,6 @@
+.more_button
+  = link_to "", about_path
+
 
 .row-fluid
   .span12
@@ -9,6 +12,8 @@
     .span4
       .infobox
         .infotext I'm a 28-year-old entrepreneur, web developer and philosophy student who believes that philosophy has practical applications in life and in business. I live in Berlin, Germany.
+
+
 
 / = link_to image_tag, about_path, id: "more_button"
 / = link_to about_path image_tag "MoreButton.png", :style => "max-height: 100px; max-width: 100px;"
