--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,3 +1,5 @@
+.more_button
+  = link_to image_tag("/assets/morebuttonsprite.png"), about_path
 
 
 .row-fluid
@@ -10,10 +12,6 @@
     .span4
       .infobox
         .infotext I'm a 28-year-old entrepreneur, web developer and philosophy student who believes that philosophy has practical applications in life and in business. I live in Berlin, Germany.
-        .more_button
-        = link_to do
-          about_path
-           
 
 
 
