--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,5 +1,5 @@
-.more_button
-  = link_to image_tag("/assets/morebuttonsprite.png"), about_path
+#more_button
+  %a static_pages#about
 
 
 .row-fluid
