made logo into a CSS background image for temporary solution to black link hover effect from bootstrap

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,4 +1,13 @@
+
+
 @import "twitter/bootstrap/bootstrap";
+
+
+a:link {color:#FF0000;}      
+a:visited {color:#00FF00;}  
+a:hover {color:#FF00FF;}  
+a:active {color:#0000FF;} 
+
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
@@ -30,3 +39,6 @@
 //
 // Example:
 // @linkColor: #ff0000;
+
+@linkColor: #ff0000;
+
