--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,11 +1,10 @@
 
 
-
-
 .row-fluid
   .span12
     .span4
-      = link_to image_tag("stoic hacks logo.png"), index_path
+      = link_to index_path do
+        #logo
     .span4
       .titlebox
         = image_tag "widetitlebox.png"
