designed About page

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -10,7 +10,7 @@
         = image_tag "widetitlebox.png"
     .span4
       .infobox
-        .infotext I'm a 28-year-old entrepreneur, web developer and philosophy student who believes that philosophy has practical applications in life and in business. I live in Berlin, Germany.
+        .infotext I'm a 28-year-old web developer and philosophy student who believes that philosophy has practical applications in life and in business. I live in Berlin, Germany.
         = link_to about_path do 
           #more_button
 
