--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -19,8 +19,25 @@ img {
   
 #logo:hover {
   background: url(/assets/stoic_hacks_logo.png);
-  padding-bottom: 320px;
+  padding-bottom: 30px;
   background-size:340px;
+  background-repeat: no-repeat;
+}
+
+
+#bandwlogo {
+  padding-bottom: 340px;
+  background: url(/assets/Stoic.jpg);
+  background-size:320px;
+  margin-top: 30px;
+  margin-left: 30px;
+  background-repeat: no-repeat;
+}
+  
+#bandwlogo:hover {
+  background: url(/assets/Stoic.jpg);
+  padding-bottom: 340px;
+  background-size:320px;
   background-repeat: no-repeat;
 }
 
