--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,26 @@
-.test {
-  font-size:18px;
+#bandwlogo {
+  height: 360px;
+  width: 360px;
+  background: url(/assets/Stoic.jpg);
+  background-size:320px;
+  margin-top: 30px;
+  margin-left: 30px;
+  background-repeat: no-repeat;
 }
+  
+#bandwlogo:hover {
+  background: url(/assets/Stoic.jpg);
+  height: 320px;
+  background-size:320px;
+  background-repeat: no-repeat;
+}
+
+#abouttext {
+  height: 360px;
+  width: 360px;
+  position: relative;
+  left: 75px;
+  top: -30px;
+  width: 95%
+}
+
