--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -7,12 +7,17 @@
         = image_tag "widetitlebox.png"      
     .span6
       = link_to index_path do
-        #logo
+        #homelogo
     .span4
   .infobox
     .infotext I'm a 28-year-old web developer and philosophy student who believes that philosophy has practical applications in life and in business. I live in Berlin, Germany.
     = link_to about_path do 
       #more_button
+  .span6.offset6
+    #epictetusbox
+      #epictetustext In every affair consider what precedes and follows, and then undertake it. Otherwise you will begin with spirit; but not having thought of the consequences, when some of them appear you will shamefully desist. You will behave like children who sometimes play like wrestlers, sometimes gladiators, sometimes blow a trumpet, and sometimes act a tragedy when they have seen and admired these shows. Thus you too will be at one time a wrestler, at another a gladiator, now a philosopher, then an orator; but with your whole soul, nothing at all.
+    #epictetusphoto   
+
   #homeposts
     %p
     - @posts.each do |post| 
@@ -24,10 +29,6 @@
         .post-content
           =truncate( post.content,:length => 300)
         = link_to 'Read More', post 
-  .span6.offset6
-    #epictetusbox
-      #epictetustext In every affair consider what precedes and follows, and then undertake it. Otherwise you will begin with spirit; but not having thought of the consequences, when some of them appear you will shamefully desist. You will behave like children who sometimes play like wrestlers, sometimes gladiators, sometimes blow a trumpet, and sometimes act a tragedy when they have seen and admired these shows. Thus you too will be at one time a wrestler, at another a gladiator, now a philosopher, then an orator; but with your whole soul, nothing at all.
-    #epictetusphoto   
 
 
 
