--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,11 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
     %link{:href => "/favicon3000.ico", :rel => "icon", :type => "image/ico"}/
+  %br
+  %left
+    = link_to index_path do
+      #header
+
   %body
     = yield
     %center
