--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -23,5 +23,8 @@
     = f.label :watercolor_or_other_image
     %br/
     = f.file_field :watercolor
+  .field
+    = f.label :tag_list, "Tags (separated by commas)"
+    = f.text_field :tag_list
   .actions
     = f.submit
