--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -30,7 +30,10 @@
           =truncate( post.content,:length => 300)
         = link_to 'Read More', post 
 
-
+/ #tag_cloud
+/   - tag_cloud Post.tag_counts, %w[s m l] do |tag, css_class|
+/     = link_to tag.name, tag_path(tag.name), class: css_class
+/     Tags: #{raw post.tag_list.map { |t| link_to t, tag_path(t) }.join(', ')}
 
 
    
