--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,4 +1,6 @@
-%h1 New post
-= render 'form'
-= link_to 'Back', posts_path
+#post
+
+  %h1 New post
+  = render 'form'
+  = link_to 'Back', posts_path
 
