--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,19 +1,20 @@
 .row-fluid
   .span6
-    %p#notice= notice
-    %p
-      %b
-        = @post.title
-    %p
-      By
-      \#{@post.name}
-    %p
-      = @post.content
-      |
-      \#{link_to 'Back', posts_path}
-
-    = image_tag @post.watercolor.url(:medium)
-    = render "comments"
+    #post
+      %p
+        %b
+          = @post.title
+      %p
+        By
+        \#{@post.name}
+      %p
+        = @post.content
+        |
+        \#{link_to 'Back', posts_path}
+      %p
+        = image_tag @post.watercolor.url(:medium)
+      %p
+        = render "comments"
 
   .span6
     = link_to index_path do
