added kaminari for pagination and also cleaned up admin view design

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -136,9 +136,9 @@ body, html{
 }
 
 a:link {color:#286981 !important; text-decoration: none;}      
-a:visited {color:#12120A !important;}
+a:visited {color:#3891B1 !important;}
 a:hover {color:#12120A !important;}
-a:active {color:#12120A !important;}
+a:active {color:#3691B1 !important;}
 
 
 a:link {background-color:#FFFFFF !important;}
