--- a/app/views/admin/dashboard.html.haml
+++ b/app/views/admin/dashboard.html.haml
@@ -1,12 +1,15 @@
-%h1 Henry's Blog Admin
 
-%br/
-
-= button_to 'New Post', new_post_path 
-
-
-%h3 Current Posts
 #adminposts
+  %br
+  
+  %h1 Henry's Blog Admin
+
+  %br
+
+  %h5
+    = link_to 'New Post', new_post_path 
+
+  %h3 Current Posts
   - @posts = Post.all
   - @posts.each do |post| 
     .posts  
@@ -17,12 +20,13 @@
       .post-author 
         = post.name
         = raw post.tag_list.map { |t| link_to t, tag_path(t) }.join(', ')
-    = button_to 'Read More', post
-    = button_to 'Edit', edit_post_path(post) 
-    = button_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } 
+    %h6
+      = link_to '- Read More', post
+      = link_to '- Edit', edit_post_path(post) 
+      = link_to '- Delete -', post, method: :delete, data: { confirm: 'Are you sure?' } 
 
- 
-= button_to "My Programming Schedule", programming_path
+%h6
+  = link_to "My Programming Schedule", programming_path
 
 
 -if current_user
