--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,5 +1,13 @@
-%h1 Editing post
 
-= render 'form'
-= link_to 'Show', @post
-= link_to 'Back', posts_path
+#adminposts
+  %br
+  %h1 Edit post
+  %br
+  -if current_user
+    = render 'form'
+    = link_to '- Show -', @post
+    = link_to 'Back -', posts_path
+  -else 
+    = render 'login'
+  %br
+  %br
