--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,6 +1,13 @@
 
 #adminposts
+  %br
   %h1 New post
-  = render 'form'
-  = link_to 'Back', posts_path
+  %br
+  -if current_user
+    = render 'form'
+    = link_to 'Back', posts_path
+  -else
+    = render 'login'
+  %br
+  %br
 
