--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -18,6 +18,7 @@
   .field
     = f.label :content
     %br/
+    = f.text_area :intro, :class => "tinymce", :rows =>, 25, :cols => 60
     = f.text_area :content, :class => "tinymce", :rows => 30, :cols => 60
     = tinymce
   .field
