--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -23,12 +23,12 @@
         - @posts.each do |post| 
           .posts  
             .post-title
-              = link_to post.title, post
+              = link_to(post.title, post)
             .post-author 
               = post.name + " -"
               = post.created_at.strftime("%d %b %Y")
             .post-content
-              = truncate_html(post.content, length: 300, omission: '...')
+              = truncate_html(post.content, length: 300, omission: '...', separator: '-MORE-')
             = link_to 'Read More', post
             %br
             = raw post.tag_list.map { |t| link_to t, tag_path(t) }.join(', ')
