--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -8,7 +8,7 @@
         - @post.errors.full_messages.each do |msg|
           %li= msg
   .field
-    = f.label :name
+    = f.label :author
     %br/
     = f.text_field :name
   .field
@@ -16,9 +16,12 @@
     %br/
     = f.text_field :title
   .field
+    = f.label :intro
+    %br/
+    = f.text_area :intro, :class => "tinymce", :rows => 16, :cols => 60
+    %br/
     = f.label :content
     %br/
-    = f.text_area :intro, :class => "tinymce", :rows =>, 25, :cols => 60
     = f.text_area :content, :class => "tinymce", :rows => 30, :cols => 60
     = tinymce
   .field
