--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -7,7 +7,7 @@
 }
 
 img {
-	width:500px;
+	max-width:500px;
 }
 
 #homelogo {
@@ -33,8 +33,8 @@ body, html{
     width:900px;
     height: cover;
     margin: auto;
+    font-family: Ubuntu, sans-serif;
 }
-
 
 
 #more_button {
@@ -149,12 +149,4 @@ a:active {background-color:#FFFFFF !important;}
 #post {
   margin-top: 40px;
   margin-left: 40px;
-}
-
-#tag_cloud {
-  width: 400px;
-  line-height: 1.6em;
-  .s { font-size: 0.8em; }
-  .m { font-size: 1.2em; }
-  .l { font-size: 1.8em; }
 }
