--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -9,7 +9,7 @@
         #homelogo
     .span4
   .infobox
-    .infotext I'm a 28-year-old web developer and philosophy student who believes that philosophy has practical applications in life and in business. I live in Berlin, Germany.
+    .infotext I'm a 28-year-old web developer and amateur philosophy student who believes that philosophy has practical applications in life and in business. I live in Berlin, Germany.
     = link_to about_path do 
       #more_button
   .span6.offset6
@@ -29,17 +29,12 @@
               = post.created_at.strftime("%d %b %Y")
             .post-content
               = truncate_html(post.intro, length: 10000, omission: '...', separator: '-MORE-')
+              = image_tag post.watercolor.url(:medium)
             = link_to 'Read More', post
             %br
             = raw post.tag_list.map { |t| link_to t, tag_path(t) }.join(', ')
           %br
         = paginate @posts 
-
-/ #tag_cloud
-/   - tag_cloud Post.tag_counts, %w[s m l] do |tag, css_class|
-/     = link_to tag.name, tag_path(tag.name), class: css_class
-/   Tags: #{raw post.tag_list.map { |t| link_to t, tag_path(t) }.join(', ')}
-
 
    
 
